k8s-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: html-page-service
spec:
  selector:
    app: html-page
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP     # Or LoadBalancer if using cloud provider
